# DagsterTest

./: Dockerfile_dagster  Dockerfile_user_code  README.md  docker-compose.yaml  pyproject.toml  run_dag.sh
etl/: __init__.py  db_con.py  repository.py
etl/assets/: say_hello.py
etl/jobs/: run_etl.py  s3_example.py  say_hello.py
etl/ops/: hello.py  s3_test.py
etl/schedules/: etl_job_schedule.py  my_hourly_schedule.py
etl/sensors/: my_sensor.py
